--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -3,27 +3,25 @@ name: Build RTOS Scheduler
 on:
   push:
     branches:
-      - main
+      - main  # Trigger the workflow on push to the main branch
   pull_request:
     branches:
-      - main
+      - main  # Trigger the workflow on pull requests to the main branch
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Use the latest Ubuntu environment
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3  # Check out the repository code
 
-      - name: Build STM32CubeIDE Project
-        uses: xanderhendriks/action-build-stm32cubeide@v14.0
-        with:
-          project-path: 'RTOS_Scheduler'  # Main project folder
-          project-target: 'Debug'         # Adjust target as necessary (Debug/Release)
+    - name: Set up ARM GCC toolchain
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gcc-arm-none-eabi
 
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: rtos_scheduler_firmware
-          path: 'RTOS_Scheduler/Debug/*.elf'  # Adjust if you want different build artifacts
+    - name: Build the project
+      run: |
+        cd RTOS_Scheduler/Debug
+        make -j16 all
